objects/ssot__ProductGuidance__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ContentText__c</fullName>
        <label>Content Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__GroupName__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GroupSequenceNumber__c</fullName>
        <label>Group Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Product Guidance Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsReactionSelectionHidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reaction Selection Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PriorityNumber__c</fullName>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ProductReferenceObject__c</fullName>
        <label>Product Reference Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductReferenceRecordId__c</fullName>
        <label>Product Reference Record</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReactionsText__c</fullName>
        <label>Reactions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Type__c</fullName>
        <label>Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1745561266793_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProductGuidance_ProductReferenceReco_rel</label>
        <referenceTo>ssot__LifeScienceMarketableProduct__dlm</referenceTo>
        <relationshipLabel>ProductGuidance_ProductReferenceReco_rel</relationshipLabel>
        <relationshipName>rel_1745561266793_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1745561271084_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProductGuidance_ProductReferenceReco_rel</label>
        <referenceTo>ssot__Product__dlm</referenceTo>
        <relationshipLabel>ProductGuidance_ProductReferenceReco_rel</relationshipLabel>
        <relationshipName>rel_1745561271084_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>